<?xml version="1.0"?>
<package>
  <name>move_to_exekutor</name>
  <version>0.0.1</version>
  <description>The move_to_exekutor package</description>

  <maintainer email="chitt@live.in">Chittaranjan Srinivas Swaminathan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>action_exekutor</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>simple_service</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cam_interface</build_depend>

  <run_depend>cam_interface</run_depend>
  
  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>
  
  <run_depend>action_exekutor</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>simple_service</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
